# the-rizzard

./: .gitignore  README.md  bot-functionnal-not-boosted.py  bot-rag.py  bot-simple.py  bot.py  bun.lockb  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  telebot.py  tsconfig.json
src/: bot.ts  config.ts  constants.ts  index.ts  types.ts  utils.ts
