[tool.poetry]
name = "rizzard-bot"
version = "0.1.0"
description = "A Telegram bot powered by AI for seduction coaching"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.0"
langchain-openai = "^0.0.5"
langchain-core = "^0.1.0"
openai = "^1.0.0"
ffmpeg-python = "^0.2.0"
Pillow = "^10.0.0"
moviepy = "^1.0.3"
opencv-python = "^4.8.0"
stripe = "^7.0.0"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3